hotfix: fix spacing for small device

--- a/src/assets/styles/Responsive.scss
+++ b/src/assets/styles/Responsive.scss
@@ -22,7 +22,7 @@
         width: 90%;
         height: 70vh;
         h4{
-            margin-top: 0px;
+            margin-top: 100px;
         }
 
         h2{
@@ -36,6 +36,7 @@
 
     .aboutme{
         width: 90%;
+        margin-top: 100px;
 
         p{
             line-height: 25px;
@@ -54,7 +55,6 @@
                 width: 100%;
             }
         }
-        
     }
 
     .backend{
